contact us email changed to *.org

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -247,7 +247,8 @@
     <string name="phone_number_profile">Phone number</string>
     <string name="email_profile">Email</string>
     <string name="appointment_with">Appointment with</string>
-    <string name="help_contact">8442748497</string>
+    <string name="contact_us_phone">8442748497</string>
     <string name="date_of_birth_invalid">Date of Birth is not valid</string>
+    <string name="contact_us_email">hello@dignityhealth.org</string>
 
 </resources>
