--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -206,6 +206,7 @@
     <string name="weeks_pregnant_too_large">Weeks Pregnant is too large</string>
     <string name="weeks_pregnant_required">Please answer the question</string>
     <string name="address_required">Address is required</string>
+    <string name="city_required">City is required</string>
     <string name="date_of_birth_required">Date of Birth is required</string>
     <string name="date_of_birth_too_young">You must be 18 to book an appointment</string>
     <string name="caregiver_required">Caregiver Name is required</string>
@@ -248,7 +249,7 @@
     <string name="email_profile">Email</string>
     <string name="appointment_with">Appointment with</string>
     <string name="contact_us_phone">8442748497</string>
-    <string name="date_of_birth_invalid">Date of Birth is not valid</string>
+    <string name="date_of_birth_invalid">Invalid Date of Birth</string>
     <string name="contact_us_email">hello@dignityhealth.org</string>
 
 </resources>
