Fixed 7879: Please change refine verbiage to Cancel - Filter - Apply

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -253,5 +253,7 @@
     <string name="contact_us_email">hello@dignityhealth.org</string>
 
     <string name="release_date">07/17/2017</string>
+    <string name="filter_title">Filter</string>
+    <string name="filter_apply">Apply</string>
 
 </resources>
