FAQ now in More Menu

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -107,6 +107,7 @@
     <string name="help">Help</string>
     <string name="preferences">Preferences</string>
     <string name="contact_us">Contact Us</string>
+    <string name="bill_pay">Bill Pay</string>
     <string name="developer">Developer</string>
     <string name="cancel">Cancel</string>
     <string name="accept">Accept</string>
