--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
 
     <string name="appointments">Appointments</string>
     <string name="home">Home</string>
-    <string name="dashboard">Welcome home</string>
+    <string name="dashboard">Welcome Home!</string>
     <string name="profile">Profile</string>
     <string name="details">Details</string>
     <string name="share_appointment">Share Appointment</string>
