--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -264,5 +264,6 @@
     <string name="contact_us_email_intent_header">Send mail...</string>
     <string name="upcoming">Upcoming</string>
     <string name="past">Past</string>
+    <string name="no_favorite_doctors">You have no favorite doctors</string>
 
 </resources>
