Fixed 13345: We now correctly separate out the logic for city & state being required. They still share the same error "area" under the city, though, due to limitations with the state's dropdown picker.

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -265,5 +265,6 @@
     <string name="upcoming">Upcoming</string>
     <string name="past">Past</string>
     <string name="no_favorite_doctors">You have no favorite doctors</string>
+    <string name="city_and_state_required"><![CDATA[City & State are required]]></string>
 
 </resources>
