Fixed a crash if appointments were null. Now we distinguish if there are no upcoming or past appointments.

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -28,7 +28,8 @@
     <string name="sign_out">Sign Out</string>
     <string name="book_an_appointment">Book an Appointment</string>
     <string name="book_appointment">Book Appointment</string>
-    <string name="no_appointments">You have no upcoming appointments.</string>
+    <string name="no_upcoming_appointments">You have no upcoming appointments.</string>
+    <string name="no_past_appointments">You have no past appointments.</string>
 
     <!-- FAD -->
     <string name="fad_title">Care</string>
