changed  dashboards search action and favorited to saved

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -191,7 +191,7 @@
     <!--Booking Flow-->
     <string name="provider_list">Provider List</string>
     <string name="recent_providers">Recent Providers</string>
-    <string name="fav_providers">My Favoties</string>
+    <string name="fav_providers">My Saved Doctors</string>
     <string name="do_you_need_standing_assistance">Do you need standing assistance?</string>
     <string name="insurance_phone_number">Insurance Phone Number</string>
     <string name="do_you_need_a_translator">Do you need a translator?</string>
