--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -266,5 +266,6 @@
     <string name="past">Past</string>
     <string name="no_favorite_doctors">You have no saved doctors</string>
     <string name="city_and_state_required"><![CDATA[City & State are required]]></string>
+    <string name="directions_not_found">Sorry, but we were unable to get directions</string>
 
 </resources>
