--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -90,7 +90,7 @@
     <string name="phone_number">Phone Number</string>
     <string name="email">Email</string>
     <string name="you_cannot_edit_email_address">You cannot edit email address</string>
-    <string name="insurance_provider">Insurance Plan</string>
+    <string name="insurance_plan">Insurance Plan</string>
     <string name="member_id">Member ID</string>
     <string name="group_id">Group ID</string>
     <string name="profile_unavailable">We’re sorry, your profile is currently unavailable.</string>
