--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -82,7 +82,7 @@
     <string name="first_name">First Name</string>
     <string name="preferred_name">Preferred Name</string>
     <string name="gender">Gender</string>
-    <string name="date_of_birth">Date of Birth</string>
+    <string name="date_of_birth">Date of Birth (mm/dd/yyyy)</string>
     <string name="address">Address</string>
     <string name="address_2">Address 2</string>
     <string name="city">City</string>
@@ -190,7 +190,7 @@
     <string name="phone_number_unknown">Phone Number Unknown</string>
 
     <!--Booking Flow-->
-    <string name="provider_list">Provider List</string>
+    <string name="provider_list">Providers List</string>
     <string name="recent_providers">Recent Providers</string>
     <string name="fav_providers">My Saved Doctors</string>
     <string name="do_you_need_standing_assistance">Do you need standing assistance?</string>
