--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -283,5 +283,10 @@
     <string name="touch_id_text">Quick and easy sign in to view your personalized content. Most of the time you will not have to manually enter your password. \n\nSharing your device with anyone who has a saved fingerprint or knows your passcode gives them access to your account. We do not recommend using Touch ID if you share your device. \n\nTurn off Touch ID anytime from here.</string>
     <string name="enable_touch_id">Enable Touch ID</string>
     <string name="touch_id_title">Touch ID</string>
+    <string name="pay_now">Pay Now</string>
+    <string name="bill_pay_desc">You now have the ability to pay your bills online.</string>
+    <string name="my_care">My Care</string>
+    <string name="patient_portal">Patient Portal</string>
+    <string name="my_care_desc">You\'ll find your test results, medication lists, doctor notes, and more!</string>
 
 </resources>
