--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -296,5 +296,7 @@
     <string name="coachmark_home_navbar_profile">Help us help you.  Adding information to your profile will streamline your experience and help you type less later.</string>
     <string name="coachmark_home_navbar_appointments">Tap Appointments to view all of your scheduled appointments.</string>
     <string name="coachmark_home_navbar_fad">See providers you recently viewed, find provider location information, and book appointments.</string>
+    <string name="coachmark_provider_details_book">This provider allows you to book appointments online. If online booking is not available, you can always call for an appointment.</string>
+    <string name="coachmarks_provider_details_location">View location information</string>
 
 </resources>
