--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -158,8 +158,8 @@
     <string name="new_update_available">New Update Available!</string>
     <string name="no_recent_providers">No recently viewed doctors</string>
     <!--Dashboard-->
-    <string name="db_text_one">The Power of Time Off: Why Vacations Are Essential.</string>
-    <string name="db_text_two">A Little Bit of Color: Don\'t Let a Sunburn Get You Down This Summer.</string>
+    <string name="db_text_one">Teaching Kids About Germs at School.</string>
+    <string name="db_text_two">Help High School Athletes Avoid Injury.</string>
     <string name="db_readmore">Read More</string>
     <string name="db_profile_alert_one">Don\'t have a saved Profile. Retrieving profile now…</string>
     <string name="db_profile_alert_two">Already have a Profile Singleton. Updating the view…</string>
