--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -157,7 +157,7 @@
     <string name="app_force_update_message">Please update your app in the App Store! We have made several improvements since your last visit and your previous version is no longer in use!</string>
     <string name="app_suggest_update_message">Please update your app in the App Store. We have made several improvements since your last visit and don\'t want you to miss out!</string>
     <string name="new_update_available">New Update Available!</string>
-    <string name="no_recent_providers">No recently viewed doctors</string>
+    <string name="no_recent_providers">No Recent Providers to show. Tap Find Care to start.</string>
     <!--Dashboard-->
     <string name="db_text_one">Teaching Kids About Germs at School.</string>
     <string name="db_text_two">Help High School Athletes Avoid Injury.</string>
