--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -307,6 +307,7 @@
     <string name="coachmark_time_slots">Tapping the date will open a calendar to select  a specific day.</string>
     <string name="coachmark_share_apt">Send your appointment information by text and email </string>
     <string name="book_this_appointment">Book this appointment</string>
+    <string name="select_env">Select Environment</string>
 
     <string name="sq_criteria_4char">Answer must be at least 4 characters</string>
     <string name="sq_criteria_question">Must not contain part of security question</string>
